<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Rate your STA</string>
    
    <string name="menuitem_refresh">Refresh</string>
    <string name="menuitem_seturi">Set URI</string>
    <string name="menuitem_exit">Exit</string>
    <string name="menuitem_evaluate_intervention">Evaluate intervention</string>
    
    <string name="alertdialog_use_gae">Use GAE</string>
    
    <string name="choose_campus">Please choose your campus</string>
    <string name="enter_campus">Enter this campus</string>
    <string name="campus_refresh">Updating campus list…</string>
    <string name="campus_refresh_finished">Campus list updated</string>
    <string name="error_timedout">Connection to server timed out</string>
    <string name="error_connrefused">Can\'t connect to the server</string>
    <string name="error_json">Error during JSON parsing</string>
    <string name="error_unknown">An unknown error has occured</string>
    <string name="interventions_load">Loading interventions…</string>
    <string name="interventions_error_noresult">There is no intervention on this campus</string>
    
    <string name="choose_intervention">Please choose which intervention you want to evaluate</string>
    <string name="intervention_state_started">Started</string>
    <string name="intervention_state_inprogress">In progress</string>
    <string name="intervention_state_finished">Finished</string>
    <string name="intervention_load">Loading intervention…</string>
    
    <string name="intervention_date_start">From</string>
    <string name="intervention_date_end">to</string>
    <string name="intervention_evaluation_number">Number of evaluations: </string>
    <string name="intervention_speaker_note">Speaker average mark: </string>
    <string name="intervention_slide_note">Slide average mark: </string>
    <string name="intervention_global_note">Intervention average mark: </string>
    
    <string name="evaluation_idbooster">ID Booster</string>
    <string name="evaluation_about_speaker">About speaker…</string>
    <string name="evaluation_speaker_knowledge">His knowledge</string>
    <string name="evaluation_speaker_capacity">His teaching capacity</string>
    <string name="evaluation_speaker_quality">His answers quality</string>
    <string name="evaluation_about_slide">About slides…</string>
    <string name="evaluation_slide_content">Richness of content</string>
    <string name="evaluation_slide_format">Format / Layout</string>
    <string name="evaluation_slide_examples">Examples</string>
    <string name="evaluation_comment">Any comment?</string>
    <string name="evaluation_submit">Submit evaluation</string>
    <string name="evaluation_sending">Sending evaluation…</string>
    <string name="evaluation_sent">Evaluation sent</string>
    <string name="evaluation_error_noidbooster">You have to provide an ID Booster</string>
    <string name="evaluation_error_wrongidbooster">Your ID Booster isn\'t valid</string>

</resources>