<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:text="@string/evaluation_idbooster"/>
	        
	        <EditText 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number"
	            android:id="@+id/evaluation_idbooster"/>
	        
	    </LinearLayout>
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/evaluation_about_speaker" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/evaluation_speaker_knowledge" />
	    
	    <RatingBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:numStars="5"
	        android:stepSize="1"
	        android:id="@+id/evaluation_speaker_knowledge" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/evaluation_speaker_capacity" />
	    
	    <RatingBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:numStars="5"
	        android:stepSize="1"
	        android:id="@+id/evaluation_speaker_capacity" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/evaluation_speaker_quality" />
	    
	    <RatingBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:numStars="5"
	        android:stepSize="1"
	        android:id="@+id/evaluation_speaker_quality" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/evaluation_about_slide" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/evaluation_slide_content" />
	    
	    <RatingBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:numStars="5"
	        android:stepSize="1"
	        android:id="@+id/evaluation_slide_content" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/evaluation_slide_format" />
	    
	    <RatingBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:numStars="5"
	        android:stepSize="1"
	        android:id="@+id/evaluation_slide_format" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/evaluation_slide_examples" />
	    
	    <RatingBar 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:numStars="5"
	        android:stepSize="1"
	        android:id="@+id/evaluation_slide_examples" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="10dp"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/evaluation_comment" />
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="top"
	        android:inputType="textMultiLine"
	        android:lines="5"
	        android:id="@+id/evaluation_comment"/>
	    
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="10dp"
	        android:text="@string/evaluation_submit"
	        android:id="@+id/evaluation_submit" />        
    </LinearLayout>
    
</ScrollView>